--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
    <div style="margin: auto" id="screen">
       <div id="LED" style="position: absolute; background-color: orange; visibility: hidden;">&nbsp;&nbsp;&nbsp;&nbsp;</div>
-      <canvas id="canvas" name="canvas" width="576" height="480" style="border:black 0px solid; padding: 0px; margin:auto;"></canvas>
+      <canvas id="canvas" name="canvas" width="576" height="480" style="border:black 0px solid; padding: 0px; margin:auto; display: block;"></canvas>
    </div>
 
    <!--
