external download via mdawson.net

--- a/index.html
+++ b/index.html
@@ -130,6 +130,7 @@
    <script type="text/javascript" src="utils.js"></script>
    <script type="text/javascript" src="printer.js"></script>
    <script type="text/javascript" src="filesystem.js"></script>
+   <script type="text/javascript" src="mdawson.js"></script>
    <script type="text/javascript" src="wav-decoder.js"></script>
    <script type="text/javascript" src="wav-encoder.js"></script>
    <script type="text/javascript" src="browser.js"></script>
