--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
 
 <body style="padding:0; margin:0; background: black; color: green;">
 
-   <div style="margin: auto" id="screen">
-      <canvas id="canvas" name="canvas" width="576" height="480" style="border:black 0px solid; padding: 0px; margin:auto; display: block;"></canvas>
+   <div style="margin: auto;" id="screen">
+      <canvas id="canvas" style="display: block; border:black 0px solid; padding: 0px; margin:auto;">aaa</canvas>
    </div>
 
    <!--
