remove reference to old renderLines()

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 <body style="padding:0; margin:0; background: black; color: green;">
 
    <div style="margin: auto;" id="screen">
-      <canvas id="canvas" style="display: block; border:black 0px solid; padding: 0px; margin:auto;">aaa</canvas>
+      <canvas id="canvas" style="display: block; border:black 0px solid; padding: 0px; margin:auto;"></canvas>
    </div>
 
    <!--
