improve drawing to canvas method; add disabled TMS9928

--- a/index.html
+++ b/index.html
@@ -58,6 +58,12 @@
    </div>
 
    <!--
+   <div style="margin: auto" id="screen_tms9928">
+      <canvas id="canvas_tms9928" style="display: block; border:rgb(98, 98, 98) 3px solid; padding: 0px; margin:auto; ">aaa</canvas>
+   </div>
+   -->
+
+   <!--
    <div class="keyboardpanel">
       <button class="vickey" onclick="sendkey(49)">1</button>
       <button class="vickey" onclick="sendkey(50)">2</button>
